--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -21,6 +24,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
+    "sass": "^1.77.2",
     "vite": "^5.2.8"
   }
 }
